[gd_scene load_steps=15 format=2]

[ext_resource path="res://asset/aliados/dodo enojau-Sheet.png" type="Texture" id=1]
[ext_resource path="res://escenas/Aliados/aliado.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=3]
radius = 107.0
height = 12.0

[sub_resource type="CircleShape2D" id=4]
radius = 430.094

[sub_resource type="CircleShape2D" id=5]
radius = 308.629

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "abajo"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=8]
resource_name = "arriba"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=9]
resource_name = "derecha"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=10]
resource_name = "diagonal_der_abajo"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=11]
resource_name = "diagonal_der_arriba"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=12]
resource_name = "diagonal_izq_abajo"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=13]
resource_name = "diagonal_izq_arriba"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=14]
resource_name = "izquierda"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Aliado" type="KinematicBody2D" groups=["aliado"]]
scale = Vector2( 0.233, 0.206 )
collision_layer = 32
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, 1 )
shape = SubResource( 3 )

[node name="AreaDeActivacion" type="Area2D" parent="."]
position = Vector2( -2, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDeActivacion"]
position = Vector2( -2.29185, -4.85434 )
shape = SubResource( 4 )

[node name="AreaParaDetenerce" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaParaDetenerce"]
position = Vector2( -16, 0 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/abajo = SubResource( 7 )
anims/arriba = SubResource( 8 )
anims/derecha = SubResource( 9 )
anims/diagonal_der_abajo = SubResource( 10 )
anims/diagonal_der_arriba = SubResource( 11 )
anims/diagonal_izq_abajo = SubResource( 12 )
anims/diagonal_izq_arriba = SubResource( 13 )
anims/izquierda = SubResource( 14 )

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2( 0, 4.85449 )
enabled = true
cast_to = Vector2( -553.648, -0.000123024 )
collision_mask = 9

[node name="RayCastUp" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -606.796 )
collision_mask = 9

[node name="RayCastRigth" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 596.567, 4.85437 )
collision_mask = 9

[node name="RayCastDown" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 611.651 )
collision_mask = 9

[node name="RayCastDownLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -394.85, 373.786 )
collision_mask = 9

[node name="RayCastDownRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 369.099, 373.786 )
collision_mask = 9

[node name="RayCastUpRight" type="RayCast2D" parent="."]
cast_to = Vector2( 381.974, -383.495 )

[node name="RayCastUpLeft" type="RayCast2D" parent="."]
cast_to = Vector2( -381.974, -383.495 )

[connection signal="body_entered" from="AreaDeActivacion" to="." method="_on_AreaDeActivacion_body_entered"]
[connection signal="body_exited" from="AreaDeActivacion" to="." method="_on_AreaDeActivacion_body_exited"]
[connection signal="body_entered" from="AreaParaDetenerce" to="." method="_on_AreaParaDetenerce_body_entered"]
[connection signal="body_exited" from="AreaParaDetenerce" to="." method="_on_AreaParaDetenerce_body_exited"]
